# 2026-09-fugs-ki

./: .gitignore  DEV-DOCS.md  README.md  contributors.md  docker-compose.yml  start-dev.bat
.github/workflows/: ci.yml  release.yml
agent/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  config.example.json  config.json.template  index.html  package.json  system-prompt.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
agent/server/: index.ts  map-tools.ts
agent/shared/: map-types.ts
agent/src/: App.tsx  index.css  main.tsx
agentv2/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.standalone  README.md  index.html  package.json  system-prompt.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
agentv2/docs/: README.md
agentv2/server/: index.ts  openai.ts  state.ts
agentv2/shared/: canvas-factories.ts  canvas.ts  turn.ts  types.ts
agentv2/src/: App.vue  main.ts  styles.css
commandx/: .env.example  Dockerfile  client.py  config.py  main.py  pyproject.toml
commandx-mcp/: client.py  main.py
commandx/tests/: test_time.py
commandx/tools/: __init__.py  message.py  mission.py  other.py
docs/commandx/: README.md
tools/: Dockerfile  main.py  pyproject.toml
tools/dwdtools/: __init__.py  dwd.py  main.py
tools/generic/: __init__.py  time.py
tools/geotools/: __init__.py  geo.py
tools/osmtools/: __init__.py  demand.py  hydrant.py  openwater.py  osm.py  overview.py  pendel.py  relay.py  routing.py
tools/tests/: test_geo.py  test_osmtools.py  test_time.py
tools/wikitool/: __init__.py  wiki.py
(+42 files in other folders)
