[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geographiclib>=2.1",
    "mcp[cli]>=1.27.0",
    "overpy>=0.7",
    "httpx>=0.27",
    "requests>=2.33.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]